k8s/service.yaml

apiVersion: v1
kind: Service
metadata:
  name: hello-website
  labels:
    app: hello-website
spec:
  selector:
    app: hello-website
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
